eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-deployment
  labels:
    app: apache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
      - name: apache-container
        image: 320442627588.dkr.ecr.eu-west-1.amazonaws.com/jenkins_repo:proba
        ports:
        - name: apache
          containerPort: 80
